2004-05-01  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* emacs/mhc-gnus.el (mhc-gnus-draft-translate): Do not add
	User-Agent header.  Add Date header and From header.
	(mhc-gnus-draft-reedit-buffer): When no MIME header is found,
	decode an input text instead of converting it to a human-editable
	text written in MML.

	* emacs/mhc-draft.el (mhc-draft-unuse-hdr-list): Add some headers.

	* emacs/mhc-gnus.el: Rewritten to support both original Gnus and
	T-gnus.

2004-04-01  Mimpei MORISHITA <mimpei@cac.co.jp> / Yoshinari Nomura

	* emacs/mhc-guess.el: brush up English date recognition.

2004-03-31  Mimpei MORISHITA <mimpei@cac.co.jp> / Yoshinari Nomura

	* emacs/mhc-guess.el: Recognize some english date format.

2004-01-12  Yoshinari Nomura  <nom@quickhack.net>

	* ruby-ext/lib/mhc-date.rb, today.in: ruby 1.8 syntax compliant.

2004-01-04  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc-mew.el (mhc-mew/header-string): Support the new format
	of summary for Mew 4.
	(mhc-mew/header-string-review): Ditto.
	
2003-12-19  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc.el (mhc-edit): Ask Alarm when direct input.
	(TNX, Mr. Toshihiko SHIMOKAWA <toshi@is.kyusan-u.ac.jp>)

2003-11-05  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc-guess.el (mhc-guess-location-list): New user option.
	(mhc-guess/location-regexp-list): New internal variable.
	(mhc-guess-location-setup): New function.
	(mhc-guess-location): Use `mhc-guess/location-regexp-list'
	instead of `mhc-guess-location-regexp-list'.

	* emacs/mhc.el (mhc-setup, mhc-reset): Call
	`mhc-guess-location-setup'.

2003-11-03  MIYOSHI Masanori  <miyoshi@boreas.dti.ne.jp>

	* ruby-ext/lib/mhc-date.rb (MhcTime::<=>): Verify that the types
	are consistent.
	(MhcDate::<=>): Ditto.

2003-10-29  MIYOSHI Masanori  <miyoshi@boreas.dti.ne.jp>

	* ruby-ext/lib/mhc-schedule.rb (MhcScheduleItem::init_by_string):
	Pass a regex as the first argment instead of a string.
