@@ -1,10 +1,18 @@
 2004-05-01  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>
 
+	* emacs/mhc.el (mhc-edit): Call `mhc-draft-mode' before calling
+	`mhc-highlight-message', in order to keep buffer-local variables
+	created by `mhc-gnus-highlight-message'.
+
 	* emacs/mhc-gnus.el (mhc-gnus-draft-translate): Do not add
 	User-Agent header.  Add Date header and From header.
 	(mhc-gnus-draft-reedit-buffer): When no MIME header is found,
 	decode an input text instead of converting it to a human-editable
 	text written in MML.
+	(mhc-gnus-get-import-buffer): Call `gnus-copy-article-buffer'
+	instead of refering `gnus-article-buffer' directly.
+	(mhc-gnus-highlight-message): Use `message-font-lock-keywords' to
+	fontify drafts.
 
 	* emacs/mhc-draft.el (mhc-draft-unuse-hdr-list): Add some headers.
 
